# stoat

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/binary/: change_vcf.py  covariate.tsv  pg.full.dist  phenotype.deconstruct.txt  phenotype_samples.tsv  samples.g0.tsv
data/eqtl/: covariate.tsv  gene_position.tsv  phenotype.tsv  qtl.tsv
data/quantitative/: covariate.tsv  pg.full.dist
plot_script/: box_plox.R  qq_mahanttan_plot.py
src/: arg_parser.cpp  arg_parser.hpp  binary_table.cpp  binary_table.hpp  gaf_creator.cpp  gaf_creator.hpp  gbzgraph.hpp  graph_path_association_finder.cpp  graph_path_association_finder.hpp  log.cpp  log.hpp  main.cpp  matrix.cpp  matrix.hpp  partitioner.cpp  partitioner.hpp  post_processing.cpp  post_processing.hpp  quantitative_table.cpp  quantitative_table.hpp  snarl_analyzer.cpp  snarl_analyzer.hpp  snarl_data_t.cpp  snarl_data_t.hpp  stats_test.cpp  stats_test.hpp  utils.cpp  utils.hpp  writer.cpp  writer.hpp
src/io/: register_io.cpp  register_io.hpp  register_loader_saver_gbz.cpp  register_loader_saver_gbz.hpp  register_loader_saver_gbzgraph.cpp  register_loader_saver_gbzgraph.hpp  register_loader_saver_hash_graph.cpp  register_loader_saver_hash_graph.hpp  register_loader_saver_packed_graph.cpp  register_loader_saver_packed_graph.hpp
src/subcommand/: bh_correct.cpp  bh_correct.hpp  graph.cpp  graph.hpp  vcf.cpp  vcf.hpp
tests/: linear_test.R  linear_test.py  phenotype.tsv  table_test.tsv
tests/expected_output/graph/binary/: binary_table_graph.tsv  top_variant_binary_graph.tsv
tests/expected_output/vcf/binary/: binary_table_vcf.tsv  snarl_analyse.tsv  top_variant_binary_vcf.tsv
tests/expected_output/vcf/binary_covar/: binary_table_vcf.tsv  top_variant_binary_vcf.tsv
tests/expected_output/vcf/eqtl_covar/: top_variant_eqtl_vcf.tsv
tests/expected_output/vcf/quantitative/: quantitative_table_vcf.tsv  top_variant_quantitative_vcf.tsv
tests/expected_output/vcf/quantitative_covar/: quantitative_table_vcf.tsv  snarl_analyse.tsv  top_variant_quantitative_vcf.tsv
tests/expected_output/vcf/snarl/: snarl_not_analyse.tsv
tests/graph_test/: 3th_snp.dist  3th_snp.hg  3th_snp.pg  4th.dist  4th.hg  4th.pg  complex_ins.dist  complex_ins.hg  complex_ins.pg  deletion_snp.dist  deletion_snp.hg  deletion_snp.pg  insert_deletion.dist  insert_deletion.hg  insert_deletion.pg  insert_snp.dist  insert_snp.hg  insert_snp.pg  inversion.dist  inversion.hg  inversion.pg  jean.dist  jean.hg  jean.pg  large_del.dist  large_del.hg  large_del.pg  linear.dist  linear.hg  linear.pg  loop.dist  loop.hg  loop.pg  loop_double.dist  loop_double.hg  loop_double.pg  loop_plus.dist  loop_plus.hg  loop_plus.pg  loop_simple.dist  (+34 more)
tests/graph_test/expected_output/simple_nested_chain/chi2/tsv/: binary_table_graph.tsv
tests/graph_test/expected_output/simple_nested_chain/exact/tsv/: binary_table_graph.tsv  top_variant_binary_graph.tsv
tests/regression/: linear_regression_arg.R  linear_regression_arg.cpp  linear_regression_arg.py  linear_regression_arg_simple.cpp  linear_regression_covar.py  linear_regression_dataset.py  linear_regression_maths.cpp  linear_regression_maths_arg.cpp  linear_regression_rvtest.cpp  linear_regression_simple.cpp  linear_regression_stoat.cpp  linear_simulation.R  linear_simulation.rmd  linear_simulation.txt  logistic_regression.py  lr_arg  lr_maths_arg  lr_simple_arg  lr_stoat  lr_stoat.cpp  simulation_test_regression.R  test.R
tests/regression/data/: 3paths.tsv  3paths_pheno.tsv  small_haplotype.tsv  small_haplotype_pheno.tsv  speudo_inverse.tsv  speudo_inverse_pheno.tsv
tests/scripts/: adjusted_hochberg.R  adjustement.R  create_dataset_simple.py  create_graph.py  plot_histogram.R  plot_histogram.py  plot_scatter.py  simulate_covar.py  stoat_report_plots.rmd  test_adjustement.R  verify_truth.py
tests/simu/: Snakefile_simulation  simu.bash
tests/simu/config/: config_binary.yaml  config_eqtl.yaml  config_quantitative.yaml
tests/simu/scripts/: simulate_test_dataset.py
tests/system/: compare_files_utils.cpp  compare_files_utils.hpp  graph_simu_test.cpp  vcf_simu_test.cpp
tests/unittest/: arg_parsing_unit.cpp  binary_test_unit.cpp  gaf_creator_unit.cpp  matrix_unit.cpp  path_partitioner_unit.cpp  post_processing_unit.cpp  quantitative_test_unit.cpp  snarl_analyzer_unit.cpp  snarl_data_t_unit.cpp  utils_unit.cpp
